{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 137,
  "lineage": "c2fa74ac-6ca6-ef6c-2989-053dbc66b7b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f68f76845daea1b",
            "arn": "arn:aws:ec2:us-east-2:216893445815:elastic-ip/eipalloc-02f68f76845daea1b",
            "domain": "vpc",
            "id": "eipalloc-02f68f76845daea1b",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-16-230-225.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.230.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform_gw",
            "aws_vpc.dip_terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0008178ae721aeaf8",
            "arn": "arn:aws:ec2:us-east-2:216893445815:elastic-ip/eipalloc-0008178ae721aeaf8",
            "domain": "vpc",
            "id": "eipalloc-0008178ae721aeaf8",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-190-16-44.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.16.44",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform_gw",
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:internet-gateway/igw-05fcd43ea56cf9127",
            "id": "igw-05fcd43ea56cf9127",
            "owner_id": "216893445815",
            "tags": {
              "Name": "dip_terraform_gw"
            },
            "tags_all": {
              "Name": "dip_terraform_gw"
            },
            "vpc_id": "vpc-0062d92df90d3f70d"
          },
          "dependencies": [
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f68f76845daea1b",
            "association_id": "eipassoc-08592630c2bba9edc",
            "connectivity_type": "public",
            "id": "nat-0fa79c6bc1dc3c962",
            "network_interface_id": "eni-0fd1b636d81167412",
            "private_ip": "10.0.0.146",
            "public_ip": "3.16.230.225",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-077d7ecd956e48642",
            "tags": {
              "Name": "dip_terraform_NATgw-1"
            },
            "tags_all": {
              "Name": "dip_terraform_NATgw-1"
            }
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_gw",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0008178ae721aeaf8",
            "association_id": "eipassoc-000be169713ff7098",
            "connectivity_type": "public",
            "id": "nat-01bf59eac878a2c6e",
            "network_interface_id": "eni-0dbde8c326757c4db",
            "private_ip": "10.0.0.219",
            "public_ip": "18.190.16.44",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07ba78d2652e07492",
            "tags": {
              "Name": "dip_terraform_NATgw-2"
            },
            "tags_all": {
              "Name": "dip_terraform_NATgw-2"
            }
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_gw",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private_rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:route-table/rtb-0bc5b2ee958cdeb5b",
            "id": "rtb-0bc5b2ee958cdeb5b",
            "owner_id": "216893445815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fa79c6bc1dc3c962",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dip_terraform_private_rtable-1"
            },
            "tags_all": {
              "Name": "dip_terraform_private_rtable-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0062d92df90d3f70d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_gw",
            "aws_nat_gateway.terraform_nat_gw",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:route-table/rtb-00710e08ecfc2bb57",
            "id": "rtb-00710e08ecfc2bb57",
            "owner_id": "216893445815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01bf59eac878a2c6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dip_terraform_private_rtable-2"
            },
            "tags_all": {
              "Name": "dip_terraform_private_rtable-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0062d92df90d3f70d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_gw",
            "aws_nat_gateway.terraform_nat_gw",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:route-table/rtb-088a0438586fac64e",
            "id": "rtb-088a0438586fac64e",
            "owner_id": "216893445815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05fcd43ea56cf9127",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dip_terraform_public_rtable"
            },
            "tags_all": {
              "Name": "dip_terraform_public_rtable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0062d92df90d3f70d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_gw",
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_private_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c3091d915698c3c",
            "route_table_id": "rtb-0bc5b2ee958cdeb5b",
            "subnet_id": "subnet-077d7ecd956e48642"
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_gw",
            "aws_nat_gateway.terraform_nat_gw",
            "aws_route_table.terraform_private_rtable",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0617a515e945b1a7c",
            "route_table_id": "rtb-00710e08ecfc2bb57",
            "subnet_id": "subnet-07ba78d2652e07492"
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_gw",
            "aws_nat_gateway.terraform_nat_gw",
            "aws_route_table.terraform_private_rtable",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5fccccd687d1a88",
            "route_table_id": "rtb-088a0438586fac64e",
            "subnet_id": "subnet-0c67fafe495ab3d39"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_gw",
            "aws_route_table.terraform_public_rtable",
            "aws_subnet.dip_terraform_public_subnet",
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6dc9fe85cb72be8",
            "route_table_id": "rtb-088a0438586fac64e",
            "subnet_id": "subnet-01443915e6e284bbc"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_gw",
            "aws_route_table.terraform_public_rtable",
            "aws_subnet.dip_terraform_public_subnet",
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dip_terraform_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:subnet/subnet-077d7ecd956e48642",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077d7ecd956e48642",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216893445815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dip_terraform_private_subnet-1"
            },
            "tags_all": {
              "Name": "dip_terraform_private_subnet-1"
            },
            "vpc_id": "vpc-0062d92df90d3f70d"
          },
          "dependencies": [
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:subnet/subnet-07ba78d2652e07492",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ba78d2652e07492",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216893445815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dip_terraform_private_subnet-2"
            },
            "tags_all": {
              "Name": "dip_terraform_private_subnet-2"
            },
            "vpc_id": "vpc-0062d92df90d3f70d"
          },
          "dependencies": [
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dip_terraform_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:subnet/subnet-0c67fafe495ab3d39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c67fafe495ab3d39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216893445815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dip_terraform_public_subnet-1"
            },
            "tags_all": {
              "Name": "dip_terraform_public_subnet-1"
            },
            "vpc_id": "vpc-0062d92df90d3f70d"
          },
          "dependencies": [
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:subnet/subnet-01443915e6e284bbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01443915e6e284bbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216893445815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dip_terraform_public_subnet-2"
            },
            "tags_all": {
              "Name": "dip_terraform_public_subnet-2"
            },
            "vpc_id": "vpc-0062d92df90d3f70d"
          },
          "dependencies": [
            "aws_vpc.dip_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dip_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:vpc/vpc-0062d92df90d3f70d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ce506ffb1177b024",
            "default_route_table_id": "rtb-090f6ee6209f5671e",
            "default_security_group_id": "sg-08ea6f48dfb8964fb",
            "dhcp_options_id": "dopt-8097d1eb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0062d92df90d3f70d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090f6ee6209f5671e",
            "owner_id": "216893445815",
            "tags": {
              "Name": "dip_terraform"
            },
            "tags_all": {
              "Name": "dip_terraform"
            }
          }
        }
      ]
    }
  ]
}